# LEG

./: 0001-added-leg-backend.patch  0002-clang-leg-backend.patch  CMakeLists.txt  LEG.h  LEG.td  LEGAsmPrinter.cpp  LEGCallingConv.td  LEGDevices.td  LEGExpandPseudoInsts.cpp  LEGFrameLowering.cpp  LEGFrameLowering.h  LEGISelDAGToDAG.cpp  LEGISelLowering.cpp  LEGISelLowering.h  LEGInstrFormat.td  LEGInstrInfo.cpp  LEGInstrInfo.h  LEGInstrInfo.td  LEGMCInstLower.cpp  LEGMachineFunctionInfo.h  LEGRegisterInfo.cpp  LEGRegisterInfo.h  LEGRegisterInfo.td  LEGSubtarget.cpp  LEGSubtarget.h  LEGTargetMachine.cpp  LEGTargetMachine.h  README.md  llvm_backend_patch.patch
MCTargetDesc/: CMakeLists.txt  LEGAsmBackend.cpp  LEGAsmBackend.h  LEGELFObjectWriter.cpp  LEGELFStreamer.h  LEGFixupKinds.h  LEGInstPrinter.cpp  LEGInstPrinter.h  LEGMCAsmInfo.cpp  LEGMCAsmInfo.h  LEGMCCodeEmitter.cpp  LEGMCTargetDesc.cpp  LEGMCTargetDesc.h
TargetInfo/: CMakeLists.txt  LEGTargetInfo.cpp  LEGTargetInfo.h
